# Daft

./: .gitignore  Cargo.toml  Makefile
daft/daft/: __init__.pyi
daft/dataframe/: dataframe.py
daft/execution/: execution_step.py  physical_plan.py  ray_actor_pool_udf.py  rust_physical_plan_shim.py
daft/io/: _lance.py  object_store_options.py
daft/io/lance/: _lance.py
daft/runners/: flotilla.py  native_runner.py  ray_runner.py
daft/udf/: legacy.py
src/common/file-formats/src/: file_format.rs  file_format_config.rs  python.rs
src/common/partitioning/src/: lib.rs
src/common/scan-info/src/: pushdowns.rs
src/daft-core/src/series/: mod.rs
src/daft-distributed/src/pipeline_node/: actor_udf.rs  into_batches.rs  into_partitions.rs  limit.rs  materialize.rs  mod.rs  project.rs  scan_source.rs  translate.rs
src/daft-distributed/src/plan/: mod.rs  runner.rs
src/daft-distributed/src/python/: mod.rs
src/daft-lance/: Cargo.toml
src/daft-lance/src/: lib.rs  schema.rs
src/daft-local-execution/: Cargo.toml
src/daft-local-execution/src/: buffer.rs  dispatcher.rs  pipeline.rs  run.rs
src/daft-local-plan/src/: plan.rs  python.rs  translate.rs
src/daft-micropartition/src/: micropartition.rs
src/daft-physical-plan/src/: plan.rs
src/daft-recordbatch/src/: lib.rs
src/daft-scan/: Cargo.toml
src/daft-scan/src/: fragment.rs  glob.rs  lance.rs  lib.rs  python.rs
src/daft-scheduler/src/: scheduler.rs
src/daft-writers/src/: lance.rs
tests/dataframe/: insight.py  test_limit_offset.py
tests/io/lancedb/: test_lancedb_native.py  test_lancedb_reads.py
(+41 files in other folders)
