[package]
name = "daft-lance"
edition.workspace = true
version.workspace = true

[dependencies]
common-runtime = {path = "../common/runtime", default-features = false}
common-error = {path = "../common/error", default-features = false}
common-file-formats = {path = "../common/file-formats", default-features = false}
common-scan-info = {path = "../common/scan-info", default-features = false}
arrow2 = {workspace = true}
daft-core = {path = "../daft-core", default-features = false}
daft-dsl = {path = "../daft-dsl", default-features = false}
lance = {version = "0.28.0"}
lance-core = {version = "0.28.0"}
lance-arrow = {version = "0.28.0"}

[lints]
workspace = true
