[package]
name = "daft-lance"
edition.workspace = true
version.workspace = true

[dependencies]
common-error = {path = "../common/error", default-features = false}
daft-recordbatch = {path = "../daft-recordbatch", default-features = false, features = ["arrow"]}
daft-schema = {path = "../daft-schema", default-features = false}
futures = {workspace = true}
lance = {version = "0.28.0"}
arrow-schema = {version = "54.2.1"}
arrow2 = {workspace = true}

[lints]
workspace = true
